--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <p>This hint generator tells you how many important checks are in a world.
     To see what is considered an important check and more information about this generator, see the <a href="https://github.com/Jsmartee/kh2fm-hints-demo">Readme</a></p>
+    <p>This is based on <a href="https://jsmartee.github.io/kh2fm-hints-demo/">JSmartee's Hint Generator</a>, the only difference being simply aesthetics. Full credit for the generator itself goes to them, and please direct any questions/feedback regarding it to them, not me.</p>
     <p>Check out another hint generator made by CrescentRR (currently in beta): <a href="https://github.com/CrescentRR/GoARacle">GoARacle</a></p>
 
     <hr>
